# zed-angular

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml
languages/angular/: config.toml  fold.scm  highlights.scm  indents.scm  injections.scm  outline.scm
src/: angular.rs  lib.rs
