[package]
name = "zed_angular"
version = "0.0.4"
edition = "2021"
publish = false
license = "MIT"
authors = ["nathansbradshaw"]

[lib]
path = "src/angular.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zed_extension_api = "0.1.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

